# KinectDetection

./: README.md
source/: CMakeLists.txt  main.cpp
